tests/fixtures/errors/postprocess/postprocess/exit-code-typo.js
module.exports = require("./hack")(async () => ({
  exit: 0
}));
